feat :star:  director modules added

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/chunks/vendors~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~addFabricsSu~56e419d3.js": "/chunks/vendors~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~addFabricsSu~56e419d3.js",
-    "/chunks/vendors~add_carrier~admin_note_add~campaignAdd~campaignEdit~company_assets_add~company_assets_edit~e~3aa5562a.js": "/chunks/vendors~add_carrier~admin_note_add~campaignAdd~campaignEdit~company_assets_add~company_assets_edit~e~3aa5562a.js",
+    "/chunks/vendors~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~addFabricsSu~d896b041.js": "/chunks/vendors~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~addFabricsSu~d896b041.js",
+    "/chunks/vendors~add_carrier~admin_note_add~company_assets_add~company_assets_edit~edit_carrier~generl settin~8b6b1f93.js": "/chunks/vendors~add_carrier~admin_note_add~company_assets_add~company_assets_edit~edit_carrier~generl settin~8b6b1f93.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/chunks/AccountReport.js": "/chunks/AccountReport.js",
@@ -19,6 +19,10 @@
     "/chunks/add_factory.js": "/chunks/add_factory.js",
     "/chunks/add_team_member.js": "/chunks/add_team_member.js",
     "/chunks/admin.js": "/chunks/admin.js",
+    "/chunks/admin/director_add.js": "/chunks/admin/director_add.js",
+    "/chunks/admin/director_edit.js": "/chunks/admin/director_edit.js",
+    "/chunks/admin/director_payment_details.js": "/chunks/admin/director_payment_details.js",
+    "/chunks/admin/directors.js": "/chunks/admin/directors.js",
     "/chunks/adminAdd.js": "/chunks/adminAdd.js",
     "/chunks/adminProfile.js": "/chunks/adminProfile.js",
     "/chunks/admin_dashboard.js": "/chunks/admin_dashboard.js",
@@ -28,7 +32,6 @@
     "/chunks/applied_user.js": "/chunks/applied_user.js",
     "/chunks/assign_admin_permission.js": "/chunks/assign_admin_permission.js",
     "/chunks/assingRoleAdmin.js": "/chunks/assingRoleAdmin.js",
-    "/chunks/backendCampaign.js": "/chunks/backendCampaign.js",
     "/chunks/balance.js": "/chunks/balance.js",
     "/chunks/balance_add.js": "/chunks/balance_add.js",
     "/chunks/bill_statement.js": "/chunks/bill_statement.js",
@@ -40,12 +43,7 @@
     "/chunks/boost_debit_add.js": "/chunks/boost_debit_add.js",
     "/chunks/boost_fund_transfer.js": "/chunks/boost_fund_transfer.js",
     "/chunks/boost_fund_transfer_add.js": "/chunks/boost_fund_transfer_add.js",
-    "/chunks/bulk_product_print_preview.js": "/chunks/bulk_product_print_preview.js",
     "/chunks/buy_one_get_one.js": "/chunks/buy_one_get_one.js",
-    "/chunks/campaignAdd.js": "/chunks/campaignAdd.js",
-    "/chunks/campaignEdit.js": "/chunks/campaignEdit.js",
-    "/chunks/campaign_image.js": "/chunks/campaign_image.js",
-    "/chunks/campaign_slider.js": "/chunks/campaign_slider.js",
     "/chunks/category_slider.js": "/chunks/category_slider.js",
     "/chunks/category_slider_add.js": "/chunks/category_slider_add.js",
     "/chunks/category_slider_edit.js": "/chunks/category_slider_edit.js",
@@ -107,7 +105,6 @@
     "/chunks/occasional_campaign.js": "/chunks/occasional_campaign.js",
     "/chunks/offer.js": "/chunks/offer.js",
     "/chunks/offerAdd.js": "/chunks/offerAdd.js",
-    "/chunks/parallax_banner.js": "/chunks/parallax_banner.js",
     "/chunks/passwordChange.js": "/chunks/passwordChange.js",
     "/chunks/print_details.js": "/chunks/print_details.js",
     "/chunks/print_house.js": "/chunks/print_house.js",
