--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/chunks/vendors~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~addFabricsSu~d896b041.js": "/chunks/vendors~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~addFabricsSu~d896b041.js",
+    "/chunks/vendors~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~addFabricsSu~fb72a5aa.js": "/chunks/vendors~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~addFabricsSu~fb72a5aa.js",
     "/chunks/vendors~add_carrier~admin_note_add~company_assets_add~company_assets_edit~edit_carrier~generl settin~8b6b1f93.js": "/chunks/vendors~add_carrier~admin_note_add~company_assets_add~company_assets_edit~edit_carrier~generl settin~8b6b1f93.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
@@ -37,12 +37,19 @@
     "/chunks/bill_statement.js": "/chunks/bill_statement.js",
     "/chunks/bill_statement_add.js": "/chunks/bill_statement_add.js",
     "/chunks/bill_statement_details.js": "/chunks/bill_statement_details.js",
+    "/chunks/boost_agency.js": "/chunks/boost_agency.js",
+    "/chunks/boost_agency_add.js": "/chunks/boost_agency_add.js",
+    "/chunks/boost_agency_payment_details.js": "/chunks/boost_agency_payment_details.js",
+    "/chunks/boost_agency_reseller_add.js": "/chunks/boost_agency_reseller_add.js",
+    "/chunks/boost_agency_reseller_edit.js": "/chunks/boost_agency_reseller_edit.js",
+    "/chunks/boost_agency_reselllers.js": "/chunks/boost_agency_reselllers.js",
     "/chunks/boost_credit.js": "/chunks/boost_credit.js",
     "/chunks/boost_credit_add.js": "/chunks/boost_credit_add.js",
     "/chunks/boost_debit.js": "/chunks/boost_debit.js",
     "/chunks/boost_debit_add.js": "/chunks/boost_debit_add.js",
     "/chunks/boost_fund_transfer.js": "/chunks/boost_fund_transfer.js",
     "/chunks/boost_fund_transfer_add.js": "/chunks/boost_fund_transfer_add.js",
+    "/chunks/boost_reselller_dollar_payment.js": "/chunks/boost_reselller_dollar_payment.js",
     "/chunks/buy_one_get_one.js": "/chunks/buy_one_get_one.js",
     "/chunks/category_slider.js": "/chunks/category_slider.js",
     "/chunks/category_slider_add.js": "/chunks/category_slider_add.js",
