--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/chunks/vendors~LoanDetails~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~~c709ac4f.js": "/chunks/vendors~LoanDetails~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~~c709ac4f.js",
+    "/chunks/vendors~LoanDetails~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~~80aff591.js": "/chunks/vendors~LoanDetails~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~~80aff591.js",
     "/chunks/vendors~add_carrier~admin_note_add~company_assets_add~company_assets_edit~edit_carrier~generl settin~8b6b1f93.js": "/chunks/vendors~add_carrier~admin_note_add~company_assets_add~company_assets_edit~edit_carrier~generl settin~8b6b1f93.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
@@ -40,6 +40,7 @@
     "/chunks/boost_agency.js": "/chunks/boost_agency.js",
     "/chunks/boost_agency_add.js": "/chunks/boost_agency_add.js",
     "/chunks/boost_agency_details.js": "/chunks/boost_agency_details.js",
+    "/chunks/boost_agency_edit.js": "/chunks/boost_agency_edit.js",
     "/chunks/boost_agency_reseller_add.js": "/chunks/boost_agency_reseller_add.js",
     "/chunks/boost_agency_reseller_edit.js": "/chunks/boost_agency_reseller_edit.js",
     "/chunks/boost_agency_reselllers.js": "/chunks/boost_agency_reselllers.js",
