--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/chunks/vendors~LoanDetails~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~~80aff591.js": "/chunks/vendors~LoanDetails~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~~80aff591.js",
-    "/chunks/vendors~add_carrier~admin_note_add~company_assets_add~company_assets_edit~edit_carrier~generl settin~8b6b1f93.js": "/chunks/vendors~add_carrier~admin_note_add~company_assets_add~company_assets_edit~edit_carrier~generl settin~8b6b1f93.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/chunks/AccountReport.js": "/chunks/AccountReport.js",
@@ -170,5 +168,9 @@
     "/chunks/tourism_fund_transfer.js": "/chunks/tourism_fund_transfer.js",
     "/chunks/tourism_fund_transfer_add.js": "/chunks/tourism_fund_transfer_add.js",
     "/chunks/user.js": "/chunks/user.js",
-    "/chunks/variant.js": "/chunks/variant.js"
+    "/chunks/variant.js": "/chunks/variant.js",
+    "/chunks/vendors~LoanDetails~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~~80aff591.js": "/chunks/vendors~LoanDetails~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~~80aff591.js",
+    "/chunks/vendors~LoanDetails~admin/director_payment_details~boost_agency_add~boost_agency_edit~boost_agency_r~a09c4a1b.js": "/chunks/vendors~LoanDetails~admin/director_payment_details~boost_agency_add~boost_agency_edit~boost_agency_r~a09c4a1b.js",
+    "/chunks/vendors~add_carrier~admin_note_add~company_assets_add~company_assets_edit~edit_carrier~generl settin~8b6b1f93.js": "/chunks/vendors~add_carrier~admin_note_add~company_assets_add~company_assets_edit~edit_carrier~generl settin~8b6b1f93.js",
+    "/chunks/vendors~adminProfile~boost_debit_add~debitAdd~mit_debit_add.js": "/chunks/vendors~adminProfile~boost_debit_add~debitAdd~mit_debit_add.js"
 }
