--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,19 +2,15 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/chunks/AccountReport.js": "/chunks/AccountReport.js",
+    "/chunks/AssignRoleAdmin.js": "/chunks/AssignRoleAdmin.js",
     "/chunks/Loan.js": "/chunks/Loan.js",
     "/chunks/LoanDetails.js": "/chunks/LoanDetails.js",
-    "/chunks/SupplierAmount.js": "/chunks/SupplierAmount.js",
-    "/chunks/accoun_purpose_edit.js": "/chunks/accoun_purpose_edit.js",
     "/chunks/account_login.js": "/chunks/account_login.js",
     "/chunks/account_purpose.js": "/chunks/account_purpose.js",
     "/chunks/account_purpose_add.js": "/chunks/account_purpose_add.js",
+    "/chunks/account_purpose_edit.js": "/chunks/account_purpose_edit.js",
     "/chunks/account_report.js": "/chunks/account_report.js",
-    "/chunks/addCompany.js": "/chunks/addCompany.js",
-    "/chunks/addFabricsSupplier.js": "/chunks/addFabricsSupplier.js",
     "/chunks/addLoan.js": "/chunks/addLoan.js",
-    "/chunks/add_carrier.js": "/chunks/add_carrier.js",
-    "/chunks/add_factory.js": "/chunks/add_factory.js",
     "/chunks/add_team_member.js": "/chunks/add_team_member.js",
     "/chunks/admin.js": "/chunks/admin.js",
     "/chunks/admin/director_add.js": "/chunks/admin/director_add.js",
@@ -27,9 +23,7 @@
     "/chunks/admin_login.js": "/chunks/admin_login.js",
     "/chunks/admin_note.js": "/chunks/admin_note.js",
     "/chunks/admin_note_add.js": "/chunks/admin_note_add.js",
-    "/chunks/applied_user.js": "/chunks/applied_user.js",
     "/chunks/assign_admin_permission.js": "/chunks/assign_admin_permission.js",
-    "/chunks/assingRoleAdmin.js": "/chunks/assingRoleAdmin.js",
     "/chunks/balance.js": "/chunks/balance.js",
     "/chunks/balance_add.js": "/chunks/balance_add.js",
     "/chunks/bill_statement.js": "/chunks/bill_statement.js",
@@ -49,54 +43,25 @@
     "/chunks/boost_fund_transfer.js": "/chunks/boost_fund_transfer.js",
     "/chunks/boost_fund_transfer_add.js": "/chunks/boost_fund_transfer_add.js",
     "/chunks/boost_reselller_dollar_payment.js": "/chunks/boost_reselller_dollar_payment.js",
-    "/chunks/buy_one_get_one.js": "/chunks/buy_one_get_one.js",
-    "/chunks/category_slider.js": "/chunks/category_slider.js",
-    "/chunks/category_slider_add.js": "/chunks/category_slider_add.js",
-    "/chunks/category_slider_edit.js": "/chunks/category_slider_edit.js",
-    "/chunks/city.js": "/chunks/city.js",
-    "/chunks/cityAdd.js": "/chunks/cityAdd.js",
-    "/chunks/cityEdit.js": "/chunks/cityEdit.js",
     "/chunks/comment.js": "/chunks/comment.js",
     "/chunks/commentAdd.js": "/chunks/commentAdd.js",
-    "/chunks/company.js": "/chunks/company.js",
     "/chunks/company_assets.js": "/chunks/company_assets.js",
     "/chunks/company_assets_add.js": "/chunks/company_assets_add.js",
     "/chunks/company_assets_edit.js": "/chunks/company_assets_edit.js",
-    "/chunks/company_payment_details.js": "/chunks/company_payment_details.js",
-    "/chunks/company_sale_details.js": "/chunks/company_sale_details.js",
-    "/chunks/contact_messgae.js": "/chunks/contact_messgae.js",
+    "/chunks/contact_message.js": "/chunks/contact_message.js",
     "/chunks/contact_messgae_reply.js": "/chunks/contact_messgae_reply.js",
-    "/chunks/coupon.js": "/chunks/coupon.js",
-    "/chunks/coupon_add.js": "/chunks/coupon_add.js",
-    "/chunks/coupon_edit.js": "/chunks/coupon_edit.js",
-    "/chunks/courier.js": "/chunks/courier.js",
-    "/chunks/courierAdd.js": "/chunks/courierAdd.js",
     "/chunks/credit.js": "/chunks/credit.js",
     "/chunks/creditAdd.js": "/chunks/creditAdd.js",
     "/chunks/creditDue.js": "/chunks/creditDue.js",
     "/chunks/creditEdit.js": "/chunks/creditEdit.js",
-    "/chunks/customer.js": "/chunks/customer.js",
-    "/chunks/customer_review.js": "/chunks/customer_review.js",
     "/chunks/debit.js": "/chunks/debit.js",
     "/chunks/debitAdd.js": "/chunks/debitAdd.js",
     "/chunks/debitEdit.js": "/chunks/debitEdit.js",
-    "/chunks/department_loan.js": "/chunks/department_loan.js",
-    "/chunks/department_loan_add.js": "/chunks/department_loan_add.js",
-    "/chunks/department_loan_transactions.js": "/chunks/department_loan_transactions.js",
     "/chunks/editAdmin.js": "/chunks/editAdmin.js",
     "/chunks/editComment.js": "/chunks/editComment.js",
-    "/chunks/editCompany.js": "/chunks/editCompany.js",
-    "/chunks/editCourier.js": "/chunks/editCourier.js",
     "/chunks/editPermission.js": "/chunks/editPermission.js",
-    "/chunks/edit_carrier.js": "/chunks/edit_carrier.js",
-    "/chunks/edit_factory.js": "/chunks/edit_factory.js",
-    "/chunks/edit_offer.js": "/chunks/edit_offer.js",
-    "/chunks/edit_sub_city.js": "/chunks/edit_sub_city.js",
     "/chunks/edit_team_member.js": "/chunks/edit_team_member.js",
-    "/chunks/fabricsSupplier.js": "/chunks/fabricsSupplier.js",
-    "/chunks/factory_list.js": "/chunks/factory_list.js",
-    "/chunks/flash_deals.js": "/chunks/flash_deals.js",
-    "/chunks/generl setting.js": "/chunks/generl setting.js",
+    "/chunks/general_setting.js": "/chunks/general_setting.js",
     "/chunks/investment.js": "/chunks/investment.js",
     "/chunks/investment_add.js": "/chunks/investment_add.js",
     "/chunks/investment_edit.js": "/chunks/investment_edit.js",
@@ -108,33 +73,14 @@
     "/chunks/mit_debit_add.js": "/chunks/mit_debit_add.js",
     "/chunks/mit_fund_transfer.js": "/chunks/mit_fund_transfer.js",
     "/chunks/mit_fund_transfer_add.js": "/chunks/mit_fund_transfer_add.js",
-    "/chunks/occasional_campaign.js": "/chunks/occasional_campaign.js",
-    "/chunks/offer.js": "/chunks/offer.js",
-    "/chunks/offerAdd.js": "/chunks/offerAdd.js",
     "/chunks/passwordChange.js": "/chunks/passwordChange.js",
-    "/chunks/print_details.js": "/chunks/print_details.js",
-    "/chunks/print_house.js": "/chunks/print_house.js",
-    "/chunks/print_house_add.js": "/chunks/print_house_add.js",
-    "/chunks/print_house_details.js": "/chunks/print_house_details.js",
-    "/chunks/print_product_add.js": "/chunks/print_product_add.js",
-    "/chunks/product.js": "/chunks/product.js",
-    "/chunks/productAdd.js": "/chunks/productAdd.js",
-    "/chunks/productEdit.js": "/chunks/productEdit.js",
-    "/chunks/productStock.js": "/chunks/productStock.js",
-    "/chunks/product_stock_tracking.js": "/chunks/product_stock_tracking.js",
-    "/chunks/product_transfer.js": "/chunks/product_transfer.js",
-    "/chunks/product_transfer_add.js": "/chunks/product_transfer_add.js",
     "/chunks/profit_report.js": "/chunks/profit_report.js",
-    "/chunks/prop_up_banner.js": "/chunks/prop_up_banner.js",
     "/chunks/properties_debit.js": "/chunks/properties_debit.js",
     "/chunks/properties_debit_add.js": "/chunks/properties_debit_add.js",
     "/chunks/properties_fund_transfer.js": "/chunks/properties_fund_transfer.js",
     "/chunks/properties_fund_transfer_add.js": "/chunks/properties_fund_transfer_add.js",
-    "/chunks/receieve_printed_product.js": "/chunks/receieve_printed_product.js",
-    "/chunks/receive_print_details.js": "/chunks/receive_print_details.js",
     "/chunks/role.js": "/chunks/role.js",
     "/chunks/roleAdd.js": "/chunks/roleAdd.js",
-    "/chunks/seasonal campaign.js": "/chunks/seasonal campaign.js",
     "/chunks/service_add.js": "/chunks/service_add.js",
     "/chunks/service_client_add.js": "/chunks/service_client_add.js",
     "/chunks/service_client_and_payment.js": "/chunks/service_client_and_payment.js",
@@ -144,21 +90,10 @@
     "/chunks/service_edit.js": "/chunks/service_edit.js",
     "/chunks/service_package_add.js": "/chunks/service_package_add.js",
     "/chunks/services.js": "/chunks/services.js",
-    "/chunks/show_carrier.js": "/chunks/show_carrier.js",
     "/chunks/slider.js": "/chunks/slider.js",
     "/chunks/slider_add.js": "/chunks/slider_add.js",
     "/chunks/slider_edit.js": "/chunks/slider_edit.js",
     "/chunks/sms_campaign.js": "/chunks/sms_campaign.js",
-    "/chunks/sub_city.js": "/chunks/sub_city.js",
-    "/chunks/sub_city_add.js": "/chunks/sub_city_add.js",
-    "/chunks/subscriber_list.js": "/chunks/subscriber_list.js",
-    "/chunks/supplier.js": "/chunks/supplier.js",
-    "/chunks/supplierAdd.js": "/chunks/supplierAdd.js",
-    "/chunks/supplierEdit.js": "/chunks/supplierEdit.js",
-    "/chunks/supplier_note.js": "/chunks/supplier_note.js",
-    "/chunks/supplier_note_add.js": "/chunks/supplier_note_add.js",
-    "/chunks/supplier_purchase_add.js": "/chunks/supplier_purchase_add.js",
-    "/chunks/supplier_purchase_from_us.js": "/chunks/supplier_purchase_from_us.js",
     "/chunks/teamSalary.js": "/chunks/teamSalary.js",
     "/chunks/team_member.js": "/chunks/team_member.js",
     "/chunks/tourism_credit.js": "/chunks/tourism_credit.js",
@@ -167,10 +102,8 @@
     "/chunks/tourism_debit_add.js": "/chunks/tourism_debit_add.js",
     "/chunks/tourism_fund_transfer.js": "/chunks/tourism_fund_transfer.js",
     "/chunks/tourism_fund_transfer_add.js": "/chunks/tourism_fund_transfer_add.js",
-    "/chunks/user.js": "/chunks/user.js",
-    "/chunks/variant.js": "/chunks/variant.js",
-    "/chunks/vendors~LoanDetails~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~~80aff591.js": "/chunks/vendors~LoanDetails~SupplierAmount~accoun_purpose_edit~account_login~account_purpose_add~addCompany~~80aff591.js",
-    "/chunks/vendors~LoanDetails~admin/director_payment_details~boost_agency_add~boost_agency_edit~boost_agency_r~a09c4a1b.js": "/chunks/vendors~LoanDetails~admin/director_payment_details~boost_agency_add~boost_agency_edit~boost_agency_r~a09c4a1b.js",
-    "/chunks/vendors~add_carrier~admin_note_add~company_assets_add~company_assets_edit~edit_carrier~generl settin~8b6b1f93.js": "/chunks/vendors~add_carrier~admin_note_add~company_assets_add~company_assets_edit~edit_carrier~generl settin~8b6b1f93.js",
-    "/chunks/vendors~adminProfile~boost_debit_add~debitAdd~mit_debit_add.js": "/chunks/vendors~adminProfile~boost_debit_add~debitAdd~mit_debit_add.js"
+    "/chunks/vendors~AssignRoleAdmin~LoanDetails~account_login~account_purpose_add~account_purpose_edit~addLoan~a~444443ce.js": "/chunks/vendors~AssignRoleAdmin~LoanDetails~account_login~account_purpose_add~account_purpose_edit~addLoan~a~444443ce.js",
+    "/chunks/vendors~LoanDetails~admin/director_payment_details~boost_agency_add~boost_agency_edit~boost_agency_r~a5d5a42b.js": "/chunks/vendors~LoanDetails~admin/director_payment_details~boost_agency_add~boost_agency_edit~boost_agency_r~a5d5a42b.js",
+    "/chunks/vendors~adminProfile~boost_debit_add~debitAdd~mit_debit_add.js": "/chunks/vendors~adminProfile~boost_debit_add~debitAdd~mit_debit_add.js",
+    "/chunks/vendors~admin_note_add~company_assets_add~company_assets_edit~general_setting.js": "/chunks/vendors~admin_note_add~company_assets_add~company_assets_edit~general_setting.js"
 }
