feat :star: upgraded to laravel 7

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,12 +5,12 @@
     "/chunks/AssignRoleAdmin.js": "/chunks/AssignRoleAdmin.js",
     "/chunks/Loan.js": "/chunks/Loan.js",
     "/chunks/LoanDetails.js": "/chunks/LoanDetails.js",
-    "/chunks/account_login.js": "/chunks/account_login.js",
     "/chunks/account_purpose.js": "/chunks/account_purpose.js",
     "/chunks/account_purpose_add.js": "/chunks/account_purpose_add.js",
     "/chunks/account_purpose_edit.js": "/chunks/account_purpose_edit.js",
     "/chunks/account_report.js": "/chunks/account_report.js",
     "/chunks/addLoan.js": "/chunks/addLoan.js",
+    "/chunks/add_merchant.js": "/chunks/add_merchant.js",
     "/chunks/add_team_member.js": "/chunks/add_team_member.js",
     "/chunks/admin.js": "/chunks/admin.js",
     "/chunks/admin/director_add.js": "/chunks/admin/director_add.js",
@@ -60,12 +60,19 @@
     "/chunks/editAdmin.js": "/chunks/editAdmin.js",
     "/chunks/editComment.js": "/chunks/editComment.js",
     "/chunks/editPermission.js": "/chunks/editPermission.js",
+    "/chunks/edit_merchant.js": "/chunks/edit_merchant.js",
     "/chunks/edit_team_member.js": "/chunks/edit_team_member.js",
     "/chunks/general_setting.js": "/chunks/general_setting.js",
     "/chunks/investment.js": "/chunks/investment.js",
     "/chunks/investment_add.js": "/chunks/investment_add.js",
     "/chunks/investment_edit.js": "/chunks/investment_edit.js",
     "/chunks/investor_details.js": "/chunks/investor_details.js",
+    "/chunks/merchant.js": "/chunks/merchant.js",
+    "/chunks/merchant_code_verified.js": "/chunks/merchant_code_verified.js",
+    "/chunks/merchant_dashboard.js": "/chunks/merchant_dashboard.js",
+    "/chunks/merchant_login.js": "/chunks/merchant_login.js",
+    "/chunks/merchant_password_reset.js": "/chunks/merchant_password_reset.js",
+    "/chunks/merchant_register.js": "/chunks/merchant_register.js",
     "/chunks/mit_clients_payment.js": "/chunks/mit_clients_payment.js",
     "/chunks/mit_credit.js": "/chunks/mit_credit.js",
     "/chunks/mit_credit_add.js": "/chunks/mit_credit_add.js",
@@ -73,6 +80,7 @@
     "/chunks/mit_debit_add.js": "/chunks/mit_debit_add.js",
     "/chunks/mit_fund_transfer.js": "/chunks/mit_fund_transfer.js",
     "/chunks/mit_fund_transfer_add.js": "/chunks/mit_fund_transfer_add.js",
+    "/chunks/new_password_merchant.js": "/chunks/new_password_merchant.js",
     "/chunks/passwordChange.js": "/chunks/passwordChange.js",
     "/chunks/profit_report.js": "/chunks/profit_report.js",
     "/chunks/properties_debit.js": "/chunks/properties_debit.js",
@@ -102,20 +110,8 @@
     "/chunks/tourism_debit_add.js": "/chunks/tourism_debit_add.js",
     "/chunks/tourism_fund_transfer.js": "/chunks/tourism_fund_transfer.js",
     "/chunks/tourism_fund_transfer_add.js": "/chunks/tourism_fund_transfer_add.js",
-    "/chunks/vendors~AssignRoleAdmin~LoanDetails~account_login~account_purpose_add~account_purpose_edit~addLoan~a~444443ce.js": "/chunks/vendors~AssignRoleAdmin~LoanDetails~account_login~account_purpose_add~account_purpose_edit~addLoan~a~444443ce.js",
+    "/chunks/vendors~AssignRoleAdmin~LoanDetails~account_purpose_add~account_purpose_edit~addLoan~add_merchant~ad~e073c29a.js": "/chunks/vendors~AssignRoleAdmin~LoanDetails~account_purpose_add~account_purpose_edit~addLoan~add_merchant~ad~e073c29a.js",
     "/chunks/vendors~LoanDetails~admin/director_payment_details~boost_agency_add~boost_agency_edit~boost_agency_r~a5d5a42b.js": "/chunks/vendors~LoanDetails~admin/director_payment_details~boost_agency_add~boost_agency_edit~boost_agency_r~a5d5a42b.js",
     "/chunks/vendors~adminProfile~boost_debit_add~debitAdd~mit_debit_add.js": "/chunks/vendors~adminProfile~boost_debit_add~debitAdd~mit_debit_add.js",
-    "/chunks/vendors~admin_note_add~company_assets_add~company_assets_edit~general_setting.js": "/chunks/vendors~admin_note_add~company_assets_add~company_assets_edit~general_setting.js",
-    "/chunks/add_merchant.js": "/chunks/add_merchant.js",
-    "/chunks/edit_merchant.js": "/chunks/edit_merchant.js",
-    "/chunks/merchant.js": "/chunks/merchant.js",
-    "/chunks/vendors~AssignRoleAdmin~LoanDetails~account_login~account_purpose_add~account_purpose_edit~addLoan~a~99f3c061.js": "/chunks/vendors~AssignRoleAdmin~LoanDetails~account_login~account_purpose_add~account_purpose_edit~addLoan~a~99f3c061.js",
-    "/chunks/merchant_code_verified.js": "/chunks/merchant_code_verified.js",
-    "/chunks/merchant_dashboard.js": "/chunks/merchant_dashboard.js",
-    "/chunks/merchant_login.js": "/chunks/merchant_login.js",
-    "/chunks/merchant_password_reset.js": "/chunks/merchant_password_reset.js",
-    "/chunks/merchant_register.js": "/chunks/merchant_register.js",
-    "/chunks/new_password_merchant.js": "/chunks/new_password_merchant.js",
-    "/chunks/vendors~AssignRoleAdmin~LoanDetails~account_login~account_purpose_add~account_purpose_edit~addLoan~a~c5fc97e2.js": "/chunks/vendors~AssignRoleAdmin~LoanDetails~account_login~account_purpose_add~account_purpose_edit~addLoan~a~c5fc97e2.js",
-    "/chunks/vendors~AssignRoleAdmin~LoanDetails~account_purpose_add~account_purpose_edit~addLoan~add_merchant~ad~e073c29a.js": "/chunks/vendors~AssignRoleAdmin~LoanDetails~account_purpose_add~account_purpose_edit~addLoan~add_merchant~ad~e073c29a.js"
+    "/chunks/vendors~admin_note_add~company_assets_add~company_assets_edit~general_setting.js": "/chunks/vendors~admin_note_add~company_assets_add~company_assets_edit~general_setting.js"
 }
