--- a/composer.json
+++ b/composer.json
@@ -8,29 +8,28 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2.3",
         "barryvdh/laravel-dompdf": "^0.8.7",
         "bumbummen99/shoppingcart": "^2.8",
         "fideloper/proxy": "^4.0",
-        "fruitcake/laravel-cors": "^2.0",
+        "fruitcake/laravel-cors": "^3.0",
         "intervention/image": "^2.5",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^7.0",
         "laravel/socialite": "^4.1",
-        "laravel/tinker": "^1.0",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "2.0",
         "maatwebsite/excel": "^3.1",
         "picqer/php-barcode-generator": "^2.0",
         "spatie/laravel-permission": "^3.17",
-         "symfony/translation": "4.3.8"
-
-
+        "symfony/translation": "5.1.7"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
