--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,17 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.3",
+        "php": "^7.3|^8.0",
         "barryvdh/laravel-dompdf": "^0.8.7",
-        "bumbummen99/shoppingcart": "^2.8",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^3.0",
         "intervention/image": "^2.5",
-        "laravel/framework": "^7.0",
-        "laravel/socialite": "^4.1",
+        "laravel/framework": "^8.0",
+        "laravel/legacy-factories": "^1.4",
+        "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "2.0",
+        "laravel/ui": "3.0",
         "maatwebsite/excel": "^3.1",
-        "picqer/php-barcode-generator": "^2.0",
         "spatie/laravel-permission": "^3.17",
         "symfony/translation": "5.1.7"
     },
@@ -28,8 +27,8 @@
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -43,12 +42,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
