delete junk file

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,118 +1,113 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/chunks/AccountReport.js": "/chunks/AccountReport.js",
-    "/chunks/AssignRoleAdmin.js": "/chunks/AssignRoleAdmin.js",
-    "/chunks/Loan.js": "/chunks/Loan.js",
-    "/chunks/LoanDetails.js": "/chunks/LoanDetails.js",
+    "/chunks/merchant_login.js": "/chunks/merchant_login.js",
+    "/chunks/merchant_password_reset.js": "/chunks/merchant_password_reset.js",
+    "/chunks/merchant_code_verified.js": "/chunks/merchant_code_verified.js",
+    "/chunks/new_password_merchant.js": "/chunks/new_password_merchant.js",
+    "/chunks/merchant_register.js": "/chunks/merchant_register.js",
+    "/chunks/merchant_dashboard.js": "/chunks/merchant_dashboard.js",
+    "/chunks/admin_dashboard.js": "/chunks/admin_dashboard.js",
+    "/chunks/slider.js": "/chunks/slider.js",
+    "/chunks/slider_add.js": "/chunks/slider_add.js",
+    "/chunks/slider_edit.js": "/chunks/slider_edit.js",
+    "/chunks/admin_login.js": "/chunks/admin_login.js",
+    "/chunks/credit.js": "/chunks/credit.js",
+    "/chunks/boost_credit.js": "/chunks/boost_credit.js",
+    "/chunks/tourism_credit.js": "/chunks/tourism_credit.js",
+    "/chunks/mit_credit.js": "/chunks/mit_credit.js",
+    "/chunks/account_report.js": "/chunks/account_report.js",
+    "/chunks/creditDue.js": "/chunks/creditDue.js",
+    "/chunks/creditAdd.js": "/chunks/creditAdd.js",
+    "/chunks/boost_credit_add.js": "/chunks/boost_credit_add.js",
+    "/chunks/mit_credit_add.js": "/chunks/mit_credit_add.js",
+    "/chunks/tourism_credit_add.js": "/chunks/tourism_credit_add.js",
+    "/chunks/creditEdit.js": "/chunks/creditEdit.js",
+    "/chunks/debit.js": "/chunks/debit.js",
+    "/chunks/boost_debit.js": "/chunks/boost_debit.js",
+    "/chunks/mit_debit.js": "/chunks/mit_debit.js",
+    "/chunks/tourism_debit.js": "/chunks/tourism_debit.js",
+    "/chunks/properties_debit.js": "/chunks/properties_debit.js",
+    "/chunks/debitAdd.js": "/chunks/debitAdd.js",
+    "/chunks/boost_debit_add.js": "/chunks/boost_debit_add.js",
+    "/chunks/mit_debit_add.js": "/chunks/mit_debit_add.js",
+    "/chunks/tourism_debit_add.js": "/chunks/tourism_debit_add.js",
+    "/chunks/properties_debit_add.js": "/chunks/properties_debit_add.js",
+    "/chunks/debitEdit.js": "/chunks/debitEdit.js",
+    "/chunks/role.js": "/chunks/role.js",
+    "/chunks/roleAdd.js": "/chunks/roleAdd.js",
+    "/chunks/editPermission.js": "/chunks/editPermission.js",
+    "/chunks/mit_fund_transfer.js": "/chunks/mit_fund_transfer.js",
+    "/chunks/mit_fund_transfer_add.js": "/chunks/mit_fund_transfer_add.js",
+    "/chunks/boost_agency.js": "/chunks/boost_agency.js",
+    "/chunks/boost_agency_add.js": "/chunks/boost_agency_add.js",
+    "/chunks/boost_agency_edit.js": "/chunks/boost_agency_edit.js",
+    "/chunks/boost_agency_reseller_add.js": "/chunks/boost_agency_reseller_add.js",
+    "/chunks/boost_agency_resellers.js": "/chunks/boost_agency_resellers.js",
+    "/chunks/dollar_request.js": "/chunks/dollar_request.js",
+    "/chunks/boost_reselller_dollar_payment.js": "/chunks/boost_reselller_dollar_payment.js",
+    "/chunks/boost_agency_reseller_edit.js": "/chunks/boost_agency_reseller_edit.js",
+    "/chunks/boost_agency_details.js": "/chunks/boost_agency_details.js",
+    "/chunks/boost_fund_transfer.js": "/chunks/boost_fund_transfer.js",
+    "/chunks/boost_fund_transfer_add.js": "/chunks/boost_fund_transfer_add.js",
+    "/chunks/tourism_fund_transfer.js": "/chunks/tourism_fund_transfer.js",
+    "/chunks/tourism_fund_transfer_add.js": "/chunks/tourism_fund_transfer_add.js",
+    "/chunks/properties_fund_transfer.js": "/chunks/properties_fund_transfer.js",
+    "/chunks/properties_fund_transfer_add.js": "/chunks/properties_fund_transfer_add.js",
+    "/chunks/comment.js": "/chunks/comment.js",
+    "/chunks/commentAdd.js": "/chunks/commentAdd.js",
+    "/chunks/editComment.js": "/chunks/editComment.js",
     "/chunks/account_purpose.js": "/chunks/account_purpose.js",
     "/chunks/account_purpose_add.js": "/chunks/account_purpose_add.js",
     "/chunks/account_purpose_edit.js": "/chunks/account_purpose_edit.js",
-    "/chunks/account_report.js": "/chunks/account_report.js",
-    "/chunks/addLoan.js": "/chunks/addLoan.js",
-    "/chunks/add_merchant.js": "/chunks/add_merchant.js",
+    "/chunks/team_member.js": "/chunks/team_member.js",
     "/chunks/add_team_member.js": "/chunks/add_team_member.js",
+    "/chunks/edit_team_member.js": "/chunks/edit_team_member.js",
+    "/chunks/teamSalary.js": "/chunks/teamSalary.js",
+    "/chunks/profit_report.js": "/chunks/profit_report.js",
+    "/chunks/AccountReport.js": "/chunks/AccountReport.js",
     "/chunks/admin.js": "/chunks/admin.js",
-    "/chunks/admin/director_add.js": "/chunks/admin/director_add.js",
-    "/chunks/admin/director_edit.js": "/chunks/admin/director_edit.js",
-    "/chunks/admin/director_payment_details.js": "/chunks/admin/director_payment_details.js",
-    "/chunks/admin/directors.js": "/chunks/admin/directors.js",
-    "/chunks/adminAdd.js": "/chunks/adminAdd.js",
     "/chunks/adminProfile.js": "/chunks/adminProfile.js",
-    "/chunks/admin_dashboard.js": "/chunks/admin_dashboard.js",
-    "/chunks/admin_login.js": "/chunks/admin_login.js",
-    "/chunks/admin_note.js": "/chunks/admin_note.js",
-    "/chunks/admin_note_add.js": "/chunks/admin_note_add.js",
+    "/chunks/adminAdd.js": "/chunks/adminAdd.js",
+    "/chunks/editAdmin.js": "/chunks/editAdmin.js",
+    "/chunks/AssignRoleAdmin.js": "/chunks/AssignRoleAdmin.js",
     "/chunks/assign_admin_permission.js": "/chunks/assign_admin_permission.js",
-    "/chunks/balance.js": "/chunks/balance.js",
-    "/chunks/balance_add.js": "/chunks/balance_add.js",
-    "/chunks/bill_statement.js": "/chunks/bill_statement.js",
-    "/chunks/bill_statement_add.js": "/chunks/bill_statement_add.js",
-    "/chunks/bill_statement_details.js": "/chunks/bill_statement_details.js",
-    "/chunks/boost_agency.js": "/chunks/boost_agency.js",
-    "/chunks/boost_agency_add.js": "/chunks/boost_agency_add.js",
-    "/chunks/boost_agency_details.js": "/chunks/boost_agency_details.js",
-    "/chunks/boost_agency_edit.js": "/chunks/boost_agency_edit.js",
-    "/chunks/boost_agency_reseller_add.js": "/chunks/boost_agency_reseller_add.js",
-    "/chunks/boost_agency_reseller_edit.js": "/chunks/boost_agency_reseller_edit.js",
-    "/chunks/boost_agency_resellers.js": "/chunks/boost_agency_resellers.js",
-    "/chunks/boost_credit.js": "/chunks/boost_credit.js",
-    "/chunks/boost_credit_add.js": "/chunks/boost_credit_add.js",
-    "/chunks/boost_debit.js": "/chunks/boost_debit.js",
-    "/chunks/boost_debit_add.js": "/chunks/boost_debit_add.js",
-    "/chunks/boost_fund_transfer.js": "/chunks/boost_fund_transfer.js",
-    "/chunks/boost_fund_transfer_add.js": "/chunks/boost_fund_transfer_add.js",
-    "/chunks/boost_reselller_dollar_payment.js": "/chunks/boost_reselller_dollar_payment.js",
-    "/chunks/comment.js": "/chunks/comment.js",
-    "/chunks/commentAdd.js": "/chunks/commentAdd.js",
+    "/chunks/passwordChange.js": "/chunks/passwordChange.js",
+    "/chunks/admin_note_add.js": "/chunks/admin_note_add.js",
+    "/chunks/admin_note.js": "/chunks/admin_note.js",
+    "/chunks/sms_campaign.js": "/chunks/sms_campaign.js",
+    "/chunks/contact_message.js": "/chunks/contact_message.js",
+    "/chunks/contact_messgae_reply.js": "/chunks/contact_messgae_reply.js",
+    "/chunks/addLoan.js": "/chunks/addLoan.js",
+    "/chunks/Loan.js": "/chunks/Loan.js",
+    "/chunks/LoanDetails.js": "/chunks/LoanDetails.js",
+    "/chunks/general_setting.js": "/chunks/general_setting.js",
     "/chunks/company_assets.js": "/chunks/company_assets.js",
     "/chunks/company_assets_add.js": "/chunks/company_assets_add.js",
     "/chunks/company_assets_edit.js": "/chunks/company_assets_edit.js",
-    "/chunks/contact_message.js": "/chunks/contact_message.js",
-    "/chunks/contact_messgae_reply.js": "/chunks/contact_messgae_reply.js",
-    "/chunks/credit.js": "/chunks/credit.js",
-    "/chunks/creditAdd.js": "/chunks/creditAdd.js",
-    "/chunks/creditDue.js": "/chunks/creditDue.js",
-    "/chunks/creditEdit.js": "/chunks/creditEdit.js",
-    "/chunks/debit.js": "/chunks/debit.js",
-    "/chunks/debitAdd.js": "/chunks/debitAdd.js",
-    "/chunks/debitEdit.js": "/chunks/debitEdit.js",
-    "/chunks/dollar_request.js": "/chunks/dollar_request.js",
-    "/chunks/editAdmin.js": "/chunks/editAdmin.js",
-    "/chunks/editComment.js": "/chunks/editComment.js",
-    "/chunks/editPermission.js": "/chunks/editPermission.js",
-    "/chunks/edit_merchant.js": "/chunks/edit_merchant.js",
-    "/chunks/edit_team_member.js": "/chunks/edit_team_member.js",
-    "/chunks/general_setting.js": "/chunks/general_setting.js",
     "/chunks/investment.js": "/chunks/investment.js",
     "/chunks/investment_add.js": "/chunks/investment_add.js",
     "/chunks/investment_edit.js": "/chunks/investment_edit.js",
     "/chunks/investor_details.js": "/chunks/investor_details.js",
-    "/chunks/merchant.js": "/chunks/merchant.js",
-    "/chunks/merchant_code_verified.js": "/chunks/merchant_code_verified.js",
-    "/chunks/merchant_dashboard.js": "/chunks/merchant_dashboard.js",
-    "/chunks/merchant_login.js": "/chunks/merchant_login.js",
-    "/chunks/merchant_password_reset.js": "/chunks/merchant_password_reset.js",
-    "/chunks/merchant_register.js": "/chunks/merchant_register.js",
-    "/chunks/mit_clients_payment.js": "/chunks/mit_clients_payment.js",
-    "/chunks/mit_credit.js": "/chunks/mit_credit.js",
-    "/chunks/mit_credit_add.js": "/chunks/mit_credit_add.js",
-    "/chunks/mit_debit.js": "/chunks/mit_debit.js",
-    "/chunks/mit_debit_add.js": "/chunks/mit_debit_add.js",
-    "/chunks/mit_fund_transfer.js": "/chunks/mit_fund_transfer.js",
-    "/chunks/mit_fund_transfer_add.js": "/chunks/mit_fund_transfer_add.js",
-    "/chunks/new_password_merchant.js": "/chunks/new_password_merchant.js",
-    "/chunks/passwordChange.js": "/chunks/passwordChange.js",
-    "/chunks/profit_report.js": "/chunks/profit_report.js",
-    "/chunks/properties_debit.js": "/chunks/properties_debit.js",
-    "/chunks/properties_debit_add.js": "/chunks/properties_debit_add.js",
-    "/chunks/properties_fund_transfer.js": "/chunks/properties_fund_transfer.js",
-    "/chunks/properties_fund_transfer_add.js": "/chunks/properties_fund_transfer_add.js",
-    "/chunks/role.js": "/chunks/role.js",
-    "/chunks/roleAdd.js": "/chunks/roleAdd.js",
+    "/chunks/bill_statement.js": "/chunks/bill_statement.js",
+    "/chunks/bill_statement_add.js": "/chunks/bill_statement_add.js",
+    "/chunks/bill_statement_details.js": "/chunks/bill_statement_details.js",
+    "/chunks/services.js": "/chunks/services.js",
     "/chunks/service_add.js": "/chunks/service_add.js",
+    "/chunks/service_edit.js": "/chunks/service_edit.js",
+    "/chunks/service_details.js": "/chunks/service_details.js",
     "/chunks/service_client_add.js": "/chunks/service_client_add.js",
-    "/chunks/service_client_and_payment.js": "/chunks/service_client_and_payment.js",
     "/chunks/service_client_edit.js": "/chunks/service_client_edit.js",
     "/chunks/service_clients.js": "/chunks/service_clients.js",
-    "/chunks/service_details.js": "/chunks/service_details.js",
-    "/chunks/service_edit.js": "/chunks/service_edit.js",
     "/chunks/service_package_add.js": "/chunks/service_package_add.js",
-    "/chunks/services.js": "/chunks/services.js",
-    "/chunks/slider.js": "/chunks/slider.js",
-    "/chunks/slider_add.js": "/chunks/slider_add.js",
-    "/chunks/slider_edit.js": "/chunks/slider_edit.js",
-    "/chunks/sms_campaign.js": "/chunks/sms_campaign.js",
-    "/chunks/teamSalary.js": "/chunks/teamSalary.js",
-    "/chunks/team_member.js": "/chunks/team_member.js",
-    "/chunks/tourism_credit.js": "/chunks/tourism_credit.js",
-    "/chunks/tourism_credit_add.js": "/chunks/tourism_credit_add.js",
-    "/chunks/tourism_debit.js": "/chunks/tourism_debit.js",
-    "/chunks/tourism_debit_add.js": "/chunks/tourism_debit_add.js",
-    "/chunks/tourism_fund_transfer.js": "/chunks/tourism_fund_transfer.js",
-    "/chunks/tourism_fund_transfer_add.js": "/chunks/tourism_fund_transfer_add.js",
-    "/chunks/vendors~AssignRoleAdmin~LoanDetails~account_purpose_add~account_purpose_edit~addLoan~add_merchant~ad~32e63321.js": "/chunks/vendors~AssignRoleAdmin~LoanDetails~account_purpose_add~account_purpose_edit~addLoan~add_merchant~ad~32e63321.js",
-    "/chunks/vendors~LoanDetails~admin/director_payment_details~boost_agency_add~boost_agency_edit~boost_agency_r~4dd92fc0.js": "/chunks/vendors~LoanDetails~admin/director_payment_details~boost_agency_add~boost_agency_edit~boost_agency_r~4dd92fc0.js",
-    "/chunks/vendors~adminProfile~boost_debit_add~debitAdd~mit_debit_add.js": "/chunks/vendors~adminProfile~boost_debit_add~debitAdd~mit_debit_add.js",
-    "/chunks/vendors~admin_note_add~company_assets_add~company_assets_edit~general_setting.js": "/chunks/vendors~admin_note_add~company_assets_add~company_assets_edit~general_setting.js"
+    "/chunks/service_client_and_payment.js": "/chunks/service_client_and_payment.js",
+    "/chunks/mit_clients_payment.js": "/chunks/mit_clients_payment.js",
+    "/chunks/admin/directors.js": "/chunks/admin/directors.js",
+    "/chunks/admin/director_add.js": "/chunks/admin/director_add.js",
+    "/chunks/admin/director_edit.js": "/chunks/admin/director_edit.js",
+    "/chunks/admin/director_payment_details.js": "/chunks/admin/director_payment_details.js",
+    "/chunks/balance.js": "/chunks/balance.js",
+    "/chunks/balance_add.js": "/chunks/balance_add.js",
+    "/chunks/merchant.js": "/chunks/merchant.js",
+    "/chunks/add_merchant.js": "/chunks/add_merchant.js",
+    "/chunks/edit_merchant.js": "/chunks/edit_merchant.js"
 }
