--- a/composer.json
+++ b/composer.json
@@ -1,69 +1,69 @@
 {
-    "name": "laravel/laravel",
-    "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
-    "license": "MIT",
-    "require": {
-        "php": "^7.3|^8.0",
-        "barryvdh/laravel-dompdf": "^0.8.7",
-        "fideloper/proxy": "^4.0",
-        "fruitcake/laravel-cors": "^3.0",
-        "intervention/image": "^2.5",
-        "laravel/framework": "^8.0",
-        "laravel/legacy-factories": "^1.4",
-        "laravel/socialite": "^5.16",
-        "laravel/tinker": "^2.0",
-        "laravel/ui": "3.0",
-        "maatwebsite/excel": "^3.1",
-        "spatie/laravel-permission": "^3.17",
-        "symfony/translation": "5.1.7"
-    },
-    "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.0"
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
-    },
-    "extra": {
-        "laravel": {
-            "dont-discover": []
-        }
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "scripts": {
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
-        ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
-        ]
+  "name": "laravel/laravel",
+  "type": "project",
+  "description": "The Laravel Framework.",
+  "keywords": [
+    "framework",
+    "laravel"
+  ],
+  "license": "MIT",
+  "require": {
+    "php": "^7.3|^8.0",
+    "barryvdh/laravel-dompdf": "^2.0",
+    "fideloper/proxy": "^4.0",
+    "fruitcake/laravel-cors": "^3.0",
+    "intervention/image": "^2.7",
+    "laravel/framework": "^8.75",
+    "laravel/legacy-factories": "^1.4",
+    "laravel/socialite": "^5.5",
+    "laravel/tinker": "^2.7",
+    "laravel/ui": "^3.4",
+    "maatwebsite/excel": "^3.1",
+    "spatie/laravel-permission": "^5.0",
+    "symfony/translation": "^6.0"
+  },
+  "require-dev": {
+    "beyondcode/laravel-dump-server": "^1.0",
+    "filp/whoops": "^2.0",
+    "fakerphp/faker": "^1.19",
+    "mockery/mockery": "^1.0",
+    "nunomaduro/collision": "^5.0",
+    "phpunit/phpunit": "^9.5"
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true
+  },
+  "extra": {
+    "laravel": {
+      "dont-discover": []
     }
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/",
+      "Database\\Factories\\": "database/factories/",
+      "Database\\Seeders\\": "database/seeders/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "scripts": {
+    "post-autoload-dump": [
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@php artisan package:discover --ansi"
+    ],
+    "post-root-package-install": [
+      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ],
+    "post-create-project-cmd": [
+      "@php artisan key:generate --ansi"
+    ]
+  }
 }
