--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,14 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^7.3|^8.0",
+    "php": "^8.1.10",
     "barryvdh/laravel-dompdf": "^2.0",
     "fideloper/proxy": "^4.0",
     "fruitcake/laravel-cors": "^3.0",
     "intervention/image": "^2.7",
-    "laravel/framework": "^8.75",
+    "laravel/framework": "^9.0",
     "laravel/legacy-factories": "^1.4",
+    "laravel/sanctum": "^3.3",
     "laravel/socialite": "^5.5",
     "laravel/tinker": "^2.7",
     "laravel/ui": "^3.4",
@@ -27,7 +28,7 @@
     "filp/whoops": "^2.0",
     "fakerphp/faker": "^1.19",
     "mockery/mockery": "^1.0",
-    "nunomaduro/collision": "^5.0",
+    "nunomaduro/collision": "^6.1",
     "phpunit/phpunit": "^9.5"
   },
   "config": {
